--- a/WingsShop/app/src/main/res/layout/activity_main_checkout.xml
+++ b/WingsShop/app/src/main/res/layout/activity_main_checkout.xml
@@ -35,6 +35,49 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"/>
 
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:id="@+id/container_total"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@drawable/et_round_border"
+                android:padding="10dp"
+                android:layout_marginStart="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_marginTop="20dp"
+                android:orientation="horizontal"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/title_checkout">
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/title_total"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Total :"
+                    android:textColor="@color/black"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title_checkout"/>
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tv_totalgrand"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:textColor="@color/black"
+                    android:textSize="22sp"
+                    android:textStyle="bold"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/title_checkout"
+                    tools:text="Rp 40.000,-"/>
+
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
             <ListView
                 android:id="@+id/lv_checkout"
                 android:layout_width="match_parent"
@@ -42,7 +85,7 @@
                 android:layout_marginTop="20dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/title_checkout"/>
+                app:layout_constraintTop_toBottomOf="@+id/container_total"/>
 
             <androidx.appcompat.widget.AppCompatButton
                 android:layout_width="270dp"
