--- a/WingsShop/app/src/main/res/layout/activity_main_list.xml
+++ b/WingsShop/app/src/main/res/layout/activity_main_list.xml
@@ -18,6 +18,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/bt_checkout"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="40dp"
