--- a/WingsShop/app/src/main/res/layout/activity_main_list.xml
+++ b/WingsShop/app/src/main/res/layout/activity_main_list.xml
@@ -12,7 +12,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_wings"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/bt_checkout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -21,16 +22,16 @@
         android:id="@+id/bt_checkout"
         android:layout_width="270dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="40dp"
-        android:layout_marginBottom="40dp"
+        android:layout_marginTop="20dp"
         android:background="@drawable/bt_rectangle_blue_bg"
         android:clickable="true"
         android:text="Checkout"
         android:textAllCaps="false"
         android:textColor="@color/white"
         android:textSize="16dp"
+        app:layout_constraintTop_toBottomOf="@+id/rv_wings"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/rv_wings" />
+        app:layout_constraintStart_toStartOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
